# tutorial-cmake

./: README.md
src/: Makefile  conf.py  index.rst  intro.rst  make.bat  modulos-II.rst  modulos.rst
src/resources/code/helloCmake/: CMakeLists.txt  hello.cpp
src/sandbox/: CMakeLists.txt
